--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -19,10 +19,10 @@ and open the template in the editor.
 
     background-image: url('../IMG/invalidLogin.jpg');
     background-size: cover;
-    
+
 }
 
-.container{
+.containerLogin{
     width:50% !important;
     position: fixed;
     top: 50%;
@@ -32,4 +32,42 @@ and open the template in the editor.
 
 input{
     margin-bottom:5px;
+}
+
+.standardcards{
+    width: 100%;
+}
+
+.standardcards div{ /*Definieren von Elementen unter andren Elementen(Subelements))*/
+    width: 25%;
+    float: left;
+}
+
+.standardcards div img{
+    width: 100%;
+    height: 100px;
+}
+
+h1{
+    text-align: center;
+    margin-top: calc(100vh / 2 - 150px);
+    color: white;
+}
+.header
+{
+ position: fixed; /*Position ändert sich nicht. Egal wo ich hinscrolle oder vergrößere. Des bleibt da*/   
+ top:0px;
+ height: 50px;
+ width: 100%;
+ background-color: black;
+}
+.header img{
+    height:100%;
+}
+body{
+    background-color: #333333
+}
+p{
+    color:white;
+    text-align: center;
 }
