--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -55,11 +55,11 @@ h1{
 }
 .header
 {
- position: fixed; /*Position ändert sich nicht. Egal wo ich hinscrolle oder vergrößere. Des bleibt da*/   
- top:0px;
- height: 50px;
- width: 100%;
- background-color: black;
+    position: fixed; /*Position ändert sich nicht. Egal wo ich hinscrolle oder vergrößere. Des bleibt da*/   
+    top:0px;
+    height: 50px;
+    width: 100%;
+    background-color: black;
 }
 .header img{
     height:100%;
@@ -73,5 +73,15 @@ p{
 }
 .register
 {
-    
+    body{
+        background-color: #525252;
+    }
+    .centered-form{
+        margin-top: 60px;
+    }
+
+    .centered-form .panel{
+        background: rgba(255, 255, 255, 0.8);
+        box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+    }
 }
